feat(calm-hub): port the Pattern stores onto the version helpers
Moves Pattern to the header/version shape on both backends. PatternStore is
unchanged, so nothing above the store layer moves.

Three things differ from the Architecture port, all of them preserving
Pattern's existing behaviour rather than making the two types match:

  - Version writes update name and description only when non-blank, via the
    new updatePresentHeaderDetails. Pattern's old shape guarded those
    fields; Architecture's did not, which is why a version write with no
    name wipes an architecture's display name and not a pattern's. Using
    the unconditional operation here would have introduced that bug into a
    type that never had it.
  - createPatternForNamespace keeps its (CreatePatternRequest, namespace)
    signature.
  - Nitrite still validates JSON before checking the pattern exists, where
    Mongo reports the missing pattern first.

One deliberate fix: NitritePatternStore returned version "1-0-0" from
create while Mongo returned "1.0.0", so the Location header for the same
operation differed by backend. Both now return "1.0.0", which is also what
the new shape actually stores — continuing to return the dash form would
have misreported it.

MongoResourceSlice is deleted. It existed to page into an array field on a
shared namespace document and only ever served Architecture and Pattern, so
this port left it with no callers — exactly as ADR 0003 predicted it would.
No test covered it, so nothing was removed alongside.

Both test classes rewritten for the new shape, 26 tests each.